# synthetic-population-qc

./: .gitignore  CITATION.cff  README.md  environment.yml  playground.ipynb  pyproject.toml
data/raw/: sample_raw_manifest.csv
docs/: core_workflow.md  data_contracts.md
examples/sample_plateau_30das/: README.md  da_codes.txt  demo_notebook.ipynb
examples/sample_plateau_30das/base_population_cache/: base_population_metadata.json  hierarchical_member_seed_p24.parquet  selected_das_core_population.csv  syn_inds_with_hh_core_population.parquet
examples/sample_plateau_30das/processed_input_cache/: context_manifest.csv  preprocessing_audit.csv
examples/sample_plateau_30das/processed_input_cache/context/: commute.csv  commute.parquet  dwelling_characteristics.csv  (+8 more)
examples/sample_plateau_30das/raw/: sample_raw_manifest.csv
src/synthetic_population_qc/: __init__.py  config.py  context_tables.py  energy_workflow.py  enrichment.py  evaluation.py  households.py  joint_fit.py  mapping_audit.py  notebook_functions.py  pipeline.py  public_schema.py  quality.py  reporting.py  scope_selection.py  seed_preparation.py  seed_transforms.py  sparse_handling.py  support_assessment.py  utils.py  workflow.py  workflow_inputs.py
src/synthetic_population_qc/core/: __init__.py  types.py
src/synthetic_population_qc/explore/: __init__.py  census_compare.py  maps.py  plots.py  workflow.py
src/synthetic_population_qc/ingest/: __init__.py  preprocess.py
src/synthetic_population_qc/runs/: __init__.py  bundle.py
src/synthetic_population_qc/synth/: __init__.py  planning.py  workflow.py
src/synthetic_population_qc/validate/: __init__.py
tests/: test_bundle_workflow.py  test_census_compare.py  test_energy_workflow.py  test_enrichment_helpers.py  test_imports.py  test_joint_fit.py  test_run_bundle.py  test_seed_preparation.py  test_support_assessment.py  test_workflow_helpers.py  test_workflow_inputs.py
(+58 files in other folders)
