[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "synthetic-population-qc"
version = "0.1.0"
description = "Bundle-first synthetic population generation and DA-level evaluation workflows for Canadian census geographies."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Mohammad Hamsa" }
]
dependencies = [
  "numpy",
  "pandas",
  "plotly",
  "geopandas",
  "pyarrow",
  "tqdm",
  "humanleague",
]

[project.optional-dependencies]
maps = [
  "urban-energy-core",
]
dev = [
  "pytest",
  "pytest-cov",
  "ruff",
  "black",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.black]
line-length = 100
target-version = ["py310"]
